# partial-context

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  cliff.toml  release-plz.toml  rustfmt.toml
.github/workflows/: check-and-lint.yaml  release.yaml  test.yaml
macros/: CHANGELOG.md  Cargo.toml
macros/src/: lib.rs  partial_context.rs
partial-context/: CHANGELOG.md  Cargo.toml
partial-context/src/: lib.rs
partial-context/tests/: integration.rs
