[package]
name = "partial-context"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
documentation.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "../README.md"
license.workspace = true
publish = true

[lib]

[features]
default = ["derive"]
derive = ["partial-context-codegen"]

[dependencies]
partial-context-codegen = { path = "../macros", version = "0.1", optional = true }
